--- a/templates/main.html
+++ b/templates/main.html
@@ -32,9 +32,9 @@
                             </a>
                         {% endfor %}
                     </div>
-                    {% if startup.extra_data.offrecovid %}
+                    {% if startup.links__extra_data.offrecovid %}
                         <div class="text-center font-weight-bold pt-2">
-                            {{ startup.extra_data.offrecovid }}
+                            {{ startup.links__extra_data.offrecovid }}
                         </div>
                     {% endif %}
                 </div>
