Maintenance alert and image lazy loading

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -143,4 +143,5 @@
     <script src="{{ url_for("static", filename="js/popper.min.js") }}"></script>
     <script src="{{ url_for("static", filename="js/bootstrap.min.js") }}"></script>
     <script src="{{ url_for("static", filename="js/fontawesome.min.js") }}"></script>
+    {% block scripts %}{% endblock %}
 </body>
