Change about details

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
                 solutions concrètes et opérationnelles pour mieux gérer la situation de crise entraînée par le Covid-19.
             </p>
             <p>
-                Les solutions sont réparties en trois catégories :
+                Les solutions sont réparties en quatre catégories :
             </p>
             <ul>
                 <li>
@@ -43,8 +43,13 @@
                 décrivant votre offre depuis le compte de votre entreprise.
             </p>
             <p class="small">
-                Ce site référence automatiquement les acteurs porteurs de solutions, qu'ils soient ou non membres
-                de Syntec Numérique.
+                Ce site référence automatiquement les acteurs porteurs de solutions, qu’ils soient ou non membres
+                de Syntec Numérique. Il est mis à jour en continu.<br />
+                Le référencement est créé sur la base des éléments fournis par l’entreprise proposant sa solution.
+                Il n’est pas exhaustif. Syntec Numérique ne vérifie ni ne garantit la qualité des solutions des
+                entreprises et ne peut en aucun cas voir sa responsabilité engagée au titre des prestations proposées
+                par ces entreprises. Syntec Numérique n’est pas impliqué dans votre processus de sélection de
+                prestataire et n’est en aucun cas prescripteur des entreprises référencées.
             </p>
         </div>
     </div>
