Change target for website

--- a/templates/main.html
+++ b/templates/main.html
@@ -30,7 +30,7 @@
                             </p>
                             {% if startup.website_url %}
                                 <div class="text-center">
-                                    <a class="btn btn-sm btn-danger" href="{{ startup.website_url }}"
+                                    <a class="btn btn-sm btn-danger" target="_blank" href="{{ startup.website_url }}"
                                        data-toggle="tooltip" data-placement="top" title="{{ startup.website_url }}">
                                         Voir le site
                                     </a>
