--- a/templates/_base.html
+++ b/templates/_base.html
@@ -142,5 +142,6 @@
     <script src="{{ url_for("static", filename="js/popper.min.js") }}"></script>
     <script src="{{ url_for("static", filename="js/bootstrap.min.js") }}"></script>
     <script src="{{ url_for("static", filename="js/fontawesome.min.js") }}"></script>
+    {% include "_tracking.html" %}
     {% block scripts %}{% endblock %}
 </body>
