--- a/templates/about.html
+++ b/templates/about.html
@@ -14,24 +14,24 @@
             </p>
             <p>
                 Les solutions sont réparties en quatre catégories :
+                <ul>
+                    <li>
+                        Des solutions <a href="{{ url_for(".famille") }}">pour le grand public et les familles</a>,
+                        pour mieux gérer le quotidien.
+                    </li>
+                    <li>
+                        Des solutions <a href="{{ url_for(".travail") }}">pour les entreprises et les salariés</a>,
+                        pour mieux s’adapter à un contexte professionnel de crise.
+                    </li>
+                    <li>
+                        Des solutions <a href="{{ url_for(".sante") }}">médicales à destination des malades</a>,
+                        ou de ceux qui craignent de l’être.
+                    </li>
+                    <li>
+                        Et des solutions à destination <a href="{{ url_for(".sante") }}">des professionnels de santé</a>.
+                    </li>
+                </ul>
             </p>
-            <ul>
-                <li>
-                    Des solutions <a href="{{ url_for(".famille") }}">pour le grand public et les familles</a>,
-                    pour mieux gérer le quotidien.
-                </li>
-                <li>
-                    Des solutions <a href="{{ url_for(".travail") }}">pour les entreprises et les salariés</a>,
-                    pour mieux s’adapter à un contexte professionnel de crise.
-                </li>
-                <li>
-                    Des solutions <a href="{{ url_for(".sante") }}">médicales à destination des malades</a>,
-                    ou de ceux qui craignent de l’être.
-                </li>
-                <li>
-                    Et des solutions à destination <a href="{{ url_for(".sante") }}">des professionnels de santé</a>.
-                </li>
-            </ul>
             <p>
                 Ce site est édité par <a href="https://syntec-numerique.fr/" target="_blank">Syntec Numérique</a>.
                 Il s’appuie sur le sourcing (identification) automatique de solution
@@ -50,6 +50,13 @@
                 entreprises et ne peut en aucun cas voir sa responsabilité engagée au titre des prestations proposées
                 par ces entreprises. Syntec Numérique n’est pas impliqué dans votre processus de sélection de
                 prestataire et n’est en aucun cas prescripteur des entreprises référencées.
+            </p>
+            <p class="small text-muted">
+                Nous utilisons des cookies internes de type « Matomo (Piwik) ». Leur finalité est d'améliorer la
+                qualité de la navigation et des contenus de covidsyntecnumerique.fr en mesurant le trafic sur le site
+                et en évaluant l'attrait de nos contenus. Les données statistiques sont hébergées en France et
+                respectent les règles du RGPD. Ces cookies peuvent être désactivés en positionnant l'option
+                « Ne pas me pister » de votre navigateur.
             </p>
         </div>
     </div>
